--- a/oauth2-client-example/src/main/resources/templates/secured.html
+++ b/oauth2-client-example/src/main/resources/templates/secured.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-siema
+Secured resource
 </body>
 </html>
